--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 
         <!--HERO-->
         <section class="hero">
+            <div class="conteiner">
                 <h1 class="hero-title">
-                    Эффективные решения <br> для вашего бизнеса
+                        Эффективные решения для вашего бизнеса
                 </h1>
                 <button type="button" class="hero-btn button">Заказать услугу</button>
+            </div>
         </section>
 
         <!--FEATURE-->
@@ -101,23 +103,31 @@
                 <ul class="list team-list">
                     <li class="team-list-item">
                         <img src="./images/team/igor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260" class="team-pic">
-                        <h3 class="team-subtitle text">Игорь Демьяненко</h3>
-                        <p class="team-desc text" lang="en">Product Designer</p>
+                        <div class="description-team">
+                            <h3 class="team-subtitle text">Игорь Демьяненко</h3>
+                            <p class="team-desc text" lang="en">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/team/olga-repina.jpg" alt="Ольга Репина" width="270" height="260" class="team-pic">
-                        <h3 class="team-subtitle text">Ольга Репина</h3>
-                        <p class="team-desc text" lang="en">Frontend Developer</p>
+                        <div class="description-team">
+                            <h3 class="team-subtitle text">Ольга Репина</h3>
+                            <p class="team-desc text" lang="en">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/team/nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" height="260" class="team-pic">
-                        <h3 class="team-subtitle text">Николай Тарасов</h3>
-                        <p class="team-desc text" lang="en">Marketing</p>
+                            <div class="description-team">
+                            <h3 class="team-subtitle text">Николай Тарасов</h3>
+                            <p class="team-desc text" lang="en">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/team/mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270" height="260" class="team-pic">
-                        <h3 class="team-subtitle text">Михаил Ермаков</h3>
-                        <p class="team-desc text" lang="en">UI Designer</p>
+                        <div class="description-team">
+                            <h3 class="team-subtitle text">Михаил Ермаков</h3>
+                            <p class="team-desc text" lang="en">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
